// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectSessionModal snapshot empty modal with leave option  1`] = `
<ModalDialog
  className="p-4 px-4.5"
  hasCloseButton={false}
  isOpen={true}
  onClose={[MockFunction hooks.nullMethod]}
  size="md"
>
  <h3>
    test-header
  </h3>
  <Form.Group
    className="pt-3"
  >
    <Form.Label>
      test-hint
    </Form.Label>
    <Form.RadioSet
      className="pt-3 pb-4"
      name="sessions"
    >
      <Form.Radio
        value="leave"
      >
        Leave session
      </Form.Radio>
    </Form.RadioSet>
  </Form.Group>
  <ActionRow>
    <Button
      onClick={[MockFunction useSelectSessionModalData.closeSessionModal]}
      variant="tertiary"
    >
      Nevermind
    </Button>
    <Button>
      Confirm Session
    </Button>
  </ActionRow>
</ModalDialog>
`;

exports[`SelectSessionModal snapshot modal with leave option  1`] = `
<ModalDialog
  className="p-4 px-4.5"
  hasCloseButton={false}
  isOpen={true}
  onClose={[MockFunction hooks.nullMethod]}
  size="md"
>
  <h3>
    test-header
  </h3>
  <Form.Group
    className="pt-3"
  >
    <Form.Label>
      test-hint
    </Form.Label>
    <Form.RadioSet
      className="pt-3 pb-4"
      name="sessions"
    >
      <Form.Radio
        key="1/2/2000"
        value="1/2/2000"
      >
        1/2/2000
         - 
        1/2/2020
      </Form.Radio>
      <Form.Radio
        key="2/3/2000"
        value="2/3/2000"
      >
        2/3/2000
         - 
        2/3/2020
      </Form.Radio>
      <Form.Radio
        key="3/4/2000"
        value="3/4/2000"
      >
        3/4/2000
         - 
        3/4/2020
      </Form.Radio>
      <Form.Radio
        value="leave"
      >
        Leave session
      </Form.Radio>
    </Form.RadioSet>
  </Form.Group>
  <ActionRow>
    <Button
      onClick={[MockFunction useSelectSessionModalData.closeSessionModal]}
      variant="tertiary"
    >
      Nevermind
    </Button>
    <Button>
      Confirm Session
    </Button>
  </ActionRow>
</ModalDialog>
`;

exports[`SelectSessionModal snapshot modal without leave option  1`] = `
<ModalDialog
  className="p-4 px-4.5"
  hasCloseButton={false}
  isOpen={true}
  onClose={[MockFunction hooks.nullMethod]}
  size="md"
>
  <h3>
    test-header
  </h3>
  <Form.Group
    className="pt-3"
  >
    <Form.Label>
      test-hint
    </Form.Label>
    <Form.RadioSet
      className="pt-3 pb-4"
      name="sessions"
    >
      <Form.Radio
        key="1/2/2000"
        value="1/2/2000"
      >
        1/2/2000
         - 
        1/2/2020
      </Form.Radio>
      <Form.Radio
        key="2/3/2000"
        value="2/3/2000"
      >
        2/3/2000
         - 
        2/3/2020
      </Form.Radio>
      <Form.Radio
        key="3/4/2000"
        value="3/4/2000"
      >
        3/4/2000
         - 
        3/4/2020
      </Form.Radio>
    </Form.RadioSet>
  </Form.Group>
  <ActionRow>
    <Button
      onClick={[MockFunction useSelectSessionModalData.closeSessionModal]}
      variant="tertiary"
    >
      Nevermind
    </Button>
    <Button>
      Confirm Session
    </Button>
  </ActionRow>
</ModalDialog>
`;
